# RAG_bot

./: .dockerignore  .gitignore  README.md  build-and-push.sh  build.sh  deploy-to-server.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf
server/: .dockerignore  Dockerfile  pyproject.toml  requirements-test.txt  requirements.txt
server/src/: config.yml  main.py  prompts.yml  sample.py
server/src/bot/: BaseBotModule.py  login_module.py  template.py
server/src/config/: Config.py
server/src/cont/: db.py  docker-compose.yml  insert_db.py  insert_db.sql  main.py  rel_db.sql  test.py
server/src/scenarios/: employee.txt  vegans.txt
server/src/services/: ConscienceIQService.py  GPTService.py  LLMService.py  QdrantService.py  QueryService.py  RAGService.py  ScenarioService.py  context_var.py  registry.py  test_agants.py  СhunksService.py
server/src/tol/: BotModule.py  TelegramBot.py  interface.py
server/src/utils/: logger.py
server/test/: Untitled.ipynb  bench.csv  create_csv.py  db.sql  gpt_normilize.py  gpt_normlize.ipynb  links.txt  output.csv  output_blocks.csv  parse_suai.py  prompts.yml  test.py
server/test/benchmark/: benchmark.py  create_dataset.py  questions.csv
server/test/chunks/: chunks.csv  chunks_to_db.py  create_chunks.py  gpt_normilize.py  test.py
server/test/cm/: docker-compose.yml  start_search.sh
server/test/output/: dissov.guap.ru_.txt  guap.ru_.txt  guap.ru_accelerator.txt  guap.ru_aeot.txt  guap.ru_anticor.txt  guap.ru_aspira.txt  guap.ru_assist-spw.txt  guap.ru_avlg.txt  guap.ru_brand.txt  guap.ru_career.txt  (+126 more)
(+173 files in other folders)
